--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+body{
+  height:100vh;
   background-color: #282c34;
-  min-height: 100vh;
+}
+.App-main {
+  background-color: #282c34;
+  min-height: 90vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  flex-direction: column;
 }
-
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.unit {
+  width: 3px;
+  border: 1px solid white;
+  margin-top: auto;
+}
+.canvas {
+  width: 90vw;
+  height: 70vh;
+  background-color: white;
+  margin-top: auto;
+}
+.footer {
+  background-color: #282c34;
+  color:white;
+}
+hr{
+  color:white;
+  margin: 0px;
+}
+.field{
+  border: 1px solid white;
+  width: 90vw;
+  height: 800px;
+  margin-top: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+button{
+  border: solid 2px white;
+  border-radius: 4px;
+  background:transparent;
+  color:white;
+  width:50px;
+  height: 30px;
+  transition: all .4s ease-in-out;
+  margin-right: 8px ;
+  margin-top: 10px;
+}
+button:hover{
+  border: solid 2px white;
+  color:#282c34;
+  background-color: white;
+  transition: all .4s ease-in-out;
+  cursor: pointer;
+}
+button:focus{
+  outline:none;
+}
+button:active{
+  border: solid 2px rgb(199, 198, 198);
+  transition: all .4s ease-in-out;
+  color:#282c34;
+  background-color: rgb(199, 198, 198);
+}
+header{
+  text-align: center;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+}
+input{
+  background-color: transparent;
+  resize: none;
+  height:20px;
+  color:white;
+  border-radius: 4px;
+  margin-top: 12px;
+  border: 1px solid white;
+  line-height: 18px;
+  min-width: 170px;
+}
+input::placeholder{
+  color:white;
+  line-height: 18px;
+}
+input:focus{
+  outline-color: #5e9ed6;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
